1998-12-13  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-init.c:
	Created BROKEN_AXP_IMLIB define to eliminate BadMatch problems
	on Alpha, with every single GNOME app that uses imlib.
	FIXME: This is a hack that masks the real problem (whatever it is)

1998-12-13  Martin Baulig  <martin@home-of-linux.org>

	* gnome-procbar.[ch]: New files. Added the GnomeProcBar that is
 	used in GTop and the cpumemusage applet here.

1998-12-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app-util.c (gnome_app_activate_statusbar): new private
	function: raises the app, sets focus to statusbar and activate it.
	(gnome_app_error_bar, gnome_app_message_bar, gnome_app_reply_bar):
	activate the statusbar.
	
1998-12-13  Martin Baulig  <martin@home-of-linux.org>

	* gnome-property-entries.c (gnome_property_entry_colors): New
	function. See gtop/procview.c and gtop/graph.c for an usage
	example.

	* gnome-properties.h: Marked as immature.
	* gnome-property-entries.h: Marked as immature.

1998-12-13  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-preferences.[ch]: Resurrect {menubar,toolbar}_handlebox as
	{menubar,toolbar}_detachable, which should eventually cause the
	gnome-dock in gnome-app not to have a handle (not functional yet).

	* gnome-app.c, dock_demo.c:
	s/container_border_width/container_set_border_width/

	* gnome-app.c (gnome_app_set_menus): Set menubar dock item's
	border width to 0.

Sat Dec 12  Felix Bellaby  <felix@pooh.u-net.com>

	* gnome-client.c (gnome_client_parse_func): set program property so
	that non-glibc systems meet SM spec requirements.
	(grab_widget): grab widget for gtk events during session save.

1998-12-12  James Henstridge  <james@daa.com.au>

	* gnome-href.c: small cosmetic change for this widget.  Now the cursor
	is the hand cursor, as in netscape.

1998-12-12  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (set_page_by_widget): don't touch GtkNotebook's
	members, only use public functions.