@@ -11,6 +11,8 @@ extern GtkType GTK_TYPE_GNOME_DIALOG_TYPE;
 extern GtkType GTK_TYPE_GNOME_SAVE_STYLE;
 extern GtkType GTK_TYPE_GNOME_RESTART_STYLE;
 extern GtkType GTK_TYPE_GNOME_CLIENT_STATE;
+extern GtkType GTK_TYPE_GNOME_DOCK_POSITION_TYPE;
+extern GtkType GTK_TYPE_GNOME_DOCK_ITEM_BEHAVIOR;
 extern GtkType GTK_TYPE_GNOME_FONT_PICKER_MODE;
 extern GtkType GTK_TYPE_GNOME_ICON_LIST_MODE;
 extern GtkType GTK_TYPE_GNOME_MDI_MODE;
@@ -25,4 +27,4 @@ extern GtkType GTK_TYPE_CLOCK_TYPE;
 extern GtkType GTK_TYPE_GDK_IMLIB_IMAGE;
 extern GtkType GTK_TYPE_GNOME_CANVAS_POINTS;
 
-#define	GNOME_TYPE_NUM_BUILTINS	(24)
+#define	GNOME_TYPE_NUM_BUILTINS	(26)
