@@ -22,6 +22,10 @@
     GTK_TYPE_ENUM, _gnome_restart_style_values },
   { "GnomeClientState", &GTK_TYPE_GNOME_CLIENT_STATE,
     GTK_TYPE_ENUM, _gnome_client_state_values },
+  { "GnomeDockPositionType", &GTK_TYPE_GNOME_DOCK_POSITION_TYPE,
+    GTK_TYPE_ENUM, _gnome_dock_position_type_values },
+  { "GnomeDockItemBehavior", &GTK_TYPE_GNOME_DOCK_ITEM_BEHAVIOR,
+    GTK_TYPE_FLAGS, _gnome_dock_item_behavior_values },
   { "GnomeFontPickerMode", &GTK_TYPE_GNOME_FONT_PICKER_MODE,
     GTK_TYPE_ENUM, _gnome_font_picker_mode_values },
   { "GnomeIconListMode", &GTK_TYPE_GNOME_ICON_LIST_MODE,
