@@ -11,6 +11,8 @@ GtkType GTK_TYPE_GNOME_DIALOG_TYPE = 0;
 GtkType GTK_TYPE_GNOME_SAVE_STYLE = 0;
 GtkType GTK_TYPE_GNOME_RESTART_STYLE = 0;
 GtkType GTK_TYPE_GNOME_CLIENT_STATE = 0;
+GtkType GTK_TYPE_GNOME_DOCK_POSITION_TYPE = 0;
+GtkType GTK_TYPE_GNOME_DOCK_ITEM_BEHAVIOR = 0;
 GtkType GTK_TYPE_GNOME_FONT_PICKER_MODE = 0;
 GtkType GTK_TYPE_GNOME_ICON_LIST_MODE = 0;
 GtkType GTK_TYPE_GNOME_MDI_MODE = 0;
